add: PersonalInformation Table and sets up a one-to-one connection
